--- a/static/theme/form-elements.html
+++ b/static/theme/form-elements.html
@@ -641,6 +641,12 @@
 													<option value="option3">Option 3</option>
 													<option value="option4">Option 4</option>
 												</select>
+                                                                                            <select name="select2" id="select2" class="select2">
+													<option value="option1">Option 1</option>
+													<option value="option2">Option 2</option>
+													<option value="option3">Option 3</option>
+													<option value="option4">Option 4</option>
+												</select>
 												<hr class="inner-separator" />
 												<select multiple name="select2-multiple1" id="select2-multiple1" class="select2 select2-multiple">
 													<optgroup label="Alaskan/Hawaiian Time Zone">
